--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@truffle/hdwallet-provider": "^1.4.3",
     "axios": "^0.21.4",
     "classnames": "^2.3.1",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
