--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-mouse-particles": "^1.1.5",
     "react-redux": "^7.2.5",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
