--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "ipfs-api": "^26.1.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "nodemailer": "^6.6.5"
